# RSD

./: .gitignore  Procfile  README.md  collect_audio.py  main.py  pyproject.toml  requirements.txt
RSD/: config.py  cron.py  devices.py  generated_config.py  models.py  player.py  presets.py  tts.py
bot/: rsd.py
conf/: mpd.conf  snapserver.conf
