[project]
name = "RSD"
version = "0.1.0"
description = ""
authors = [ { name = "Jan Pokorný", email="jenompokorny@gmail.com" }]
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "moviepy~=1.0.3",
    "TTS~=0.22.0",
    "python-mpd2~=3.1.1",
    "nicegui~=1.4.35",
    "honcho~=1.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
